# terraform-aws-tardigrade-iam-key-enforcer

./: .pylintrc  AUTHORS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  main.tf  output.tf  pyproject.toml  pytest.ini  ruff.toml  variables.tf  versions.tf
.github/: dependabot.yml
.github/workflows/: lint.yml  release.yml  test-python.yml  test.yml
email_templates/: admin_email.html  admin_email.txt  user_email.html  user_email.txt
modules/scheduled_event/: README.md  main.tf  variables.tf
src/python/: __init__.py  aws_manager.py  constants.py  errors.py  iam_key_enforcement_report_row.py  iam_key_enforcer.py  iam_key_enforcer_report.py  iam_key_enforcer_reporter.py  mailers.py  requirements.txt  utils.py
tests/create_all/: main.tf  variables.tf
tests/python/: conftest.py  test_aws_manager.py  test_iam_key_enforcement_report_row.py  test_iam_key_enforcer.py  test_iam_key_enforcer_reporter.py  test_mailers.py  test_utils.py
