[build-system]
# Use uv's PEP 517 build backend for fast, reproducible builds
build-backend = "uv_build"
requires = ["uv-build<0.10"]

[project]
name = "terraform-aws-tardigrade-iam-key-enforcer"
version = "2.0.0"
description = "Enforces AWS IAM Access Key policies"
readme = {file = "README.md", content-type = "text/markdown"}
license = "Apache-2.0"
license-files = ["LICENSE", "AUTHORS.md"]
authors = [
    {name = "Plus3IT Maintainers of Terraform AWS Tardigrade IAM Key Enforcer", email = "projects@plus3it.com"},
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",

]
dependencies = [
    "aws-lambda-powertools==3.23.0",
    "aws-assume-role-lib==2.10.0",
    "boto3==1.42.21"
]
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0"
]

[project.urls]
Homepage = "https://github.com/plus3it/terraform-aws-tardigrade-iam-key-enforcer"
Repository = "https://github.com/plus3it/terraform-aws-tardigrade-iam-key-enforcer"

[tool.uv.build-backend]
source-include = [
    "CHANGELOG.md"
]

source-exclude = [
    ".bumpversion.cfg",
    ".editorconfig",
    ".git",
    ".gitattributes",
    ".gitignore",
    ".gitkeep",
    ".github",
    ".travis.yml",
    ".mergify.yml",
    ".pydocstyle",
    ".pylintrc",
    ".yamllint.yml",
    "tests",
]

[tool.ruff]
# Line length and excludes chosen to match prior flake8 settings
line-length = 88
exclude = [
    ".git",
    "__pycache__",
    ".eggs",
    "*.egg",
    "build",
    "dist",
    "htmlcov",
]

[tool.ruff.lint]
ignore = [
    "B905",  # zip() without strict= - requires Python 3.10+, project supports 3.8+
    "D107",  # __init__ docstrings are documented at the class level to avoid duplication
    "D203",  # Conflicts with D211 (no-blank-line-before-class). Project uses D211 style.
    "D212",  # Conflicts with D213 (multi-line-summary-first-line). Project uses D213 style.
    "S202",  # tarfile.extractall without filter - requires Python 3.12+ or custom validation
    "EXE001",  # Only occurs in CI when source is restored as artifact (loses executable bit)
    "ANN",  # 500+ missing type annotations across src/tests; keep ignored for now; see staged plan below
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S314", "SLF", "ARG", "PLR2004", "PLR0913", "INP001"]

# Prepare for future gradual enabling of ANN (flake8-annotations) with saner defaults
[tool.ruff.lint.flake8-annotations]
# Don't require explicit "-> None" on __init__ (aligns with mypy default)
mypy-init-return = true

# Allow using Any for *args/**kwargs without error
allow-star-arg-any = true

# Don't flag unused conventional dummy args like _ or unused parameters in callbacks
suppress-dummy-args = true

# Don't require explicit -> None on functions that implicitly return None
suppress-none-returning = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src/python"]

[tool.pylint.main]
init-hook = "import sys, os; sys.path.append(os.path.join(os.getcwd(), 'src', 'python'))"
